[tool.poetry]
name = "starlette-authlib"
version = "0.1.25"
description = "A drop-in replacement for Starlette session middleware, using authlib's jwt"
authors = ["Alessandro Ogier <alessandro.ogier@gmail.com>"]
readme = "README.md"
repository = "https://github.com/aogier/starlette-authlib"

[tool.poetry.dependencies]
python = "^3.7"
authlib = "<1.3"
starlette = "<0.29"

[tool.poetry.dev-dependencies]
pytest = "^7"
mypy = "^1.1"
requests = "^2.28.2"
black = "^23"
autoflake = "^2.1"
pytest-cov = "^4"
changelog-cli = "^0.7.1"
codecov = "^2.1.12"
httpx = "^0.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
