[tool.poetry]
name = "starlette-authlib"
version = "0.3.7"
description = "A drop-in replacement for Starlette session middleware, using authlib's jwt"
authors = ["Alessandro Ogier <alessandro.ogier@gmail.com>"]
readme = "README.md"
repository = "https://github.com/aogier/starlette-authlib"

[tool.poetry.dependencies]
python = "^3.8"
authlib = "<1.5"
starlette = "<0.45"

[tool.poetry.group.dev.dependencies]
autoflake = "<2.3"
black = "^24.0.0"
codecov = "^2.1.12"
httpx = "^0.24.0"
mypy = "^1.1"
pre-commit = "2.21.0"
pytest = "^7"
pytest-cov = "^4"
requests = "^2.28.2"
isort = "^5.11.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
